feat: added rabbitMQ to test async tasks
